@@ -1,3 +1,6 @@
+6-17-20
+- new attach argument, '--ns': fake interrupt SIGSTOP signal
+
 6-16-20
 - iosdbg can debug launchd without it spazzing out
 - support for new libarmadillo api
